# CorpusStudio

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  MANIFEST.md  Makefile  README.md  SECURITY.md  TASKS.md
.claude/: settings.json
.claude/agents/: assurance-reviewer.md
.claude/hooks/: README.md  advisory_classify.py  finalize_reminder.py
.claude/rules/: assurance-self-modify.md  contracts.md  evaluation-honesty.md  loop-controller-self-modify.md  sealed-research.md  worker-closure.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: assurance.yml  codeql.yml  desktop-tests.yml  engine-tests.yml  loop.yml  release.yml  security.yml  web.yml
apps/desktop/: CorpusStudio.Desktop.sln  CorpusStudio.Desktop.sln.README.md  Directory.Build.props  README.md
apps/web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: lib.rs  main.rs
docs/: AI_ASSIST.md  AI_ASSIST_LAB.md  ARCHITECTURE.md  AUTONOMOUS_LOOP.md  AVALONIA_MIGRATION_PLAN.md  BACKEND_WORKER_PROTOCOL.md  CHECKPOINT_RESUME.md  CLI_REFERENCE.md  CROSS_PLATFORM_ASSESSMENT.md  CURRENT_STATE.md  DATASET_CARD.md  DATASET_TESTING_WORKFLOW.md  DATA_MODEL.md  DEBT.md  DEVELOPER_GUIDE.md  DEVELOPMENT_SETUP.md  EFFECTIVE_EXECUTION_CONFIGURATION.md  ENVIRONMENT_MANAGER.md  EVALUATION_LAB.md  EVALUATION_STUDIO.md  EVALUATION_SUITES.md  EXPORT_FORMATS.md  GATES.md  HANDOFF_PROMPT_FOR_CLAUDE_OR_CODEX.md  HARDWARE_STORAGE_PROFILE.md  HOST_STATE.md  IMPLEMENTATION_PLAN.md  IMPORT_EXPORT.md  IMPORT_SYSTEM.md  LOCAL_FIRST.md  MEASUREMENT_HARNESS.md  MODEL_BACKENDS.md  MODEL_TOKENIZER_CONTRACTS.md  MOE_ARCHITECTURE.md  MOE_MODEL_INSPECTION.md  MOE_TRAINING_ARCHITECTURE.md  PARAMETER_ACCOUNTING.md  PLATFORM_RUN.md  POST_4096_ROADMAP_RESEARCH.md  PRETRAINING_ARCHITECTURE.md  (+26 more)
engine/: README.md  constraints.txt  pyproject.toml
engine/.pytest_tmp/test_cli_dataset_debt_end_to_e0/: examples.jsonl
engine/corpus_studio/: cli.py  parquet_support.py
engine/corpus_studio/ai_assist/: __init__.py  assistant.py
engine/corpus_studio/arena/: __init__.py  judge.py  models.py  runner.py  storage.py
engine/corpus_studio/cleaners/: basic_cleaner.py
engine/corpus_studio/evaluation/: __init__.py  benchmark.py  evaluator.py  reports.py  scorers.py  scoring.py
engine/corpus_studio/exporters/: cleaning.py  jsonl_exporter.py  parquet_exporter.py  preference_exporter.py  redaction.py  tabular_exporter.py
engine/corpus_studio/gates/: __init__.py  basic_gates.py  models.py  provenance_gate.py  runner.py
engine/corpus_studio/importers/: hf_hub.py  jsonl_importer.py  jsonl_preview.py  parquet_importer.py  tabular_importer.py  text_importer.py
engine/corpus_studio/model_backends/: __init__.py  base.py  in_process.py  ollama.py  openai_compatible.py  retry.py
engine/corpus_studio/platform/: __init__.py  app_paths.py  artifacts.py  backends.py  build_provenance.py  calibrator.py  checkpoint.py  common.py  contracts.py  dataset_conformance.py  enums.py  environment_manager.py  environments.py  execution_config.py  gpu_health.py  host_platform.py  model_inspector.py  moe_inspector.py  objectives.py  parameter_accounting.py  planner.py  probes.py  process_control.py  profile_store.py  profiler.py  runners.py  schema_export.py  storage_profiler.py  subprocess_supervisor.py  supervisor.py  telemetry.py  trace_records.py  watchdog.py  worker.py  worker_protocol.py
engine/corpus_studio/providers/: __init__.py  overrides.py  policy.py
engine/corpus_studio/quality/: basic_quality.py
engine/corpus_studio/reporting/: __init__.py  dataset_card.py  debt_report.py  weight_card.py
engine/corpus_studio/schemas/: base.py  project_schemas.py  registry.py
engine/corpus_studio/splitters/: leakage.py  random_splitter.py  structure_aware_chunker.py
engine/corpus_studio/storage/: examples_writer.py  index.py  project.py
engine/corpus_studio/suites/: models.py  registry.py  runner.py
engine/corpus_studio/tokenization/: estimate.py
engine/corpus_studio/training/: __init__.py  artifact_registry.py  checkpoint_io.py  compatibility.py  config_templates.py  environment.py  estimators.py  eval_handoff.py  gpu_probe.py  launch.py  merge.py  model_card.py  model_fetch.py  preflight.py  provenance.py  quantization.py  run_registry.py  trace_generation.py  traces.py  trainer.py  unsloth_trainer.py
engine/corpus_studio/validators/: basic_validator.py  results.py
engine/corpus_studio/versions/: __init__.py  gc.py  row_store.py  version_card.py  version_diff.py  version_registry.py  version_restore.py
engine/tests/: _checkpoint_reference.py  conftest.py  test_ai_assist.py  test_ai_assist_candidate_gate.py  test_arena.py  test_artifact_registry.py  test_assurance_doc_lint.py  test_assurance_git_state.py  test_assurance_obligations.py  test_assurance_robustness.py  test_assurance_scopes.py  test_assurance_status.py  test_assurance_verification.py  test_assurance_worker_reachability.py  test_backend_retry.py  test_basic_validator.py  test_benchmark.py  test_build_provenance.py  test_chat_gates.py  test_cleaners.py  test_cli.py  test_cli_telemetry.py  test_cs_loop.py  test_dataset_card.py  test_dataset_conformance.py  test_debt_report.py  test_e2e_cli_smoke.py  test_e2e_pipeline.py  test_environment_manager_lifecycle.py  test_eval_deterministic_decoding.py  test_evaluation_progress.py  test_evaluation_report.py  test_evaluation_scorers.py  test_evaluation_suites.py  test_examples_clean.py  test_examples_mutate.py  test_examples_writer.py  test_execution_config.py  test_export_cleaning.py  test_export_provenance.py  (+122 more)
scripts/: cs_assure.py  cs_loop.py  new_project_stub.py  setup_linux_training.sh  smoke_desktop_examples.ps1  validate_examples.py
tools/: generate_icon.py
(+489 files in other folders)
