[project]
name = "corpus-studio-engine"
# Versioned together with the desktop app (apps/desktop/Directory.Build.props).
version = "1.3.0"
description = "Dataset engine for Corpus Studio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MalloyTheDev" }]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "orjson>=3.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.8"
]
# Optional exact tokenizer. The engine stays dependency-light by default (a
# Unicode-aware heuristic estimates token counts); installing this extra lets
# estimate_tokens use tiktoken for exact BPE counts. `pip install
# corpus-studio-engine[tokenizer]`. See corpus_studio/tokenization/estimate.py.
tokenizer = [
    "tiktoken>=0.7"
]

[project.scripts]
corpus-studio = "corpus_studio.cli:app"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
# Third-party stubs (pydantic/typer/orjson) aren't installed in CI; type-check our
# own package against a pragmatic baseline rather than chasing library internals.
ignore_missing_imports = true
files = ["corpus_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: opt-in tests that require a running local backend (e.g. Ollama). Enable with CORPUS_STUDIO_OLLAMA_INTEGRATION=1.",
]
