[project]
name = "corpus-studio-engine"
# Versioned together with the desktop app (apps/desktop/Directory.Build.props).
version = "1.3.0"
description = "Dataset engine for Corpus Studio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MalloyTheDev" }]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "orjson>=3.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.8",
    # Installed in dev/CI so the optional Parquet round-trip is actually exercised
    # (it is a runtime *optional* extra for users — see `parquet` below).
    "pyarrow>=15"
]
# Optional exact tokenizers. The engine stays dependency-light by default (a
# Unicode-aware heuristic estimates token counts). Installing `tokenizer` lets
# estimate_tokens use tiktoken for exact GPT-4-family BPE counts; installing
# `model-tokenizer` lets it load a training target model's OWN tokenizer from the
# Hub (`Tokenizer.from_pretrained`) for exact per-model budgets. Both are optional
# and fall back gracefully. `pip install corpus-studio-engine[model-tokenizer]`.
# See corpus_studio/tokenization/estimate.py.
tokenizer = [
    "tiktoken>=0.7"
]
model-tokenizer = [
    "tokenizers>=0.15"
]
# Optional Parquet import/export. Parquet is a large columnar dependency (pyarrow),
# so the engine stays dependency-light by default and Parquet paths fail fast with an
# install hint when it's absent. `pip install corpus-studio-engine[parquet]`.
# See corpus_studio/parquet_support.py.
parquet = [
    "pyarrow>=15"
]
# Optional FIRST-PARTY TRAINING runtime. Heavy, GPU-oriented deps so the engine stays
# dependency-light by default — data prep, gates, and config export need NONE of these.
# Installing `train` lets CorpusStudio RUN the QLoRA itself (corpus_studio.training.trainer)
# instead of only exporting a config. bitsandbytes (4-bit QLoRA) is CUDA-only, so it is skipped
# on macOS via an environment marker; run `corpus-studio train-check` to see what's available and
# whether a real GPU run (vs the CPU toy path) is possible. `pip install corpus-studio-engine[train]`.
# See corpus_studio/training/environment.py. NOTE: a default `pip` pulls the CPU build of torch;
# GPU training needs the CUDA build (https://pytorch.org) — train-check reports this.
train = [
    "torch>=2.1",
    "transformers>=4.44",
    "peft>=0.11",
    "trl>=0.9",
    "accelerate>=0.30",
    "datasets>=2.19",
    "bitsandbytes>=0.43; platform_system != 'Darwin'",
]

[project.scripts]
# main() forces UTF-8 stdio before running the CLI so `corpus-studio --help` (which contains → arrows)
# doesn't crash on a Windows cp1252 console. app() directly would skip that.
corpus-studio = "corpus_studio.cli:main"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
# Third-party stubs (pydantic/typer/orjson) aren't installed in CI; type-check our
# own package against a pragmatic baseline rather than chasing library internals.
ignore_missing_imports = true
files = ["corpus_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: opt-in tests that require a running local backend (e.g. Ollama). Enable with CORPUS_STUDIO_OLLAMA_INTEGRATION=1.",
]

[tool.coverage.report]
# Enforce a coverage floor when tests run under --cov (as CI does). Set a few points
# below the current level (~91%) so normal fluctuation passes but a real regression
# fails. Raise it as coverage climbs; never lower it to make a PR pass.
fail_under = 88
